[gd_scene load_steps=15 format=3 uid="uid://bbb0nefifrnmp"]

[ext_resource type="Script" uid="uid://c07nsgrrhy54r" path="res://scripts/game.gd" id="1_u5sy4"]
[ext_resource type="PackedScene" uid="uid://028p3xwhksbk" path="res://scenes/wolf.tscn" id="2_p57ef"]
[ext_resource type="PackedScene" uid="uid://b3a7qdu1igbpd" path="res://scenes/frog.tscn" id="3_gee14"]
[ext_resource type="PackedScene" uid="uid://s8gealgs6y68" path="res://scenes/plus_one.tscn" id="3_u5sy4"]
[ext_resource type="PackedScene" uid="uid://c62ame6nynrk8" path="res://scenes/player.tscn" id="4_vtaks"]
[ext_resource type="PackedScene" uid="uid://defklb2dlb2ex" path="res://scenes/upgrade_window.tscn" id="5_0tnpc"]
[ext_resource type="PackedScene" uid="uid://ckyg7jm3umrv4" path="res://scenes/hud.tscn" id="5_kvpfn"]
[ext_resource type="PackedScene" uid="uid://cnxr54lesy8pe" path="res://scenes/upgrade.tscn" id="6_0tnpc"]
[ext_resource type="AudioStream" uid="uid://bvewx4drb1jfa" path="res://art/tuto/gameover.wav" id="6_dinhu"]

[sub_resource type="Curve2D" id="Curve2D_h2yge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 153, 1, 0, 0, 0, 0, 965, 1)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_0tnpc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 972, 644, 0, 0, 0, 0, 140, 645)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_vtaks"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1151, 71, 0, 0, 0, 0, 1150, 536)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_gee14"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3, 536, 0, 0, 0, 0, -1, 82)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_kvpfn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 84, 47, 0, 0, 0, 0, 1043, 44, 0, 0, 0, 0, 91, 123, 0, 0, 0, 0, 1034, 157, 0, 0, 0, 0, 88, 236, 0, 0, 0, 0, 1032, 272, 0, 0, 0, 0, 91, 346, 0, 0, 0, 0, 1032, 384, 0, 0, 0, 0, 90, 438, 0, 0, 0, 0, 1029, 482, 0, 0, 0, 0, 95, 531, 0, 0, 0, 0, 1031, 567)
}
point_count = 12

[node name="Game" type="Node"]
script = ExtResource("1_u5sy4")
wolf_scene = ExtResource("2_p57ef")
frog_scene = ExtResource("3_gee14")
plus_one_scene = ExtResource("3_u5sy4")
plus_two_scene = ExtResource("5_0tnpc")
upgrade_scene = ExtResource("6_0tnpc")
upgrade_window_scene = ExtResource("5_0tnpc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09113214, 0.18399036, 0.4572636, 1)

[node name="Player" parent="." instance=ExtResource("4_vtaks")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(577, 320)

[node name="HUD" parent="." instance=ExtResource("5_kvpfn")]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dinhu")

[node name="MobPath" type="Node2D" parent="."]

[node name="MobPath1" type="Path2D" parent="MobPath"]
curve = SubResource("Curve2D_h2yge")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath/MobPath1"]
position = Vector2(153, 1)

[node name="MobPath2" type="Path2D" parent="MobPath"]
curve = SubResource("Curve2D_0tnpc")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath/MobPath2"]
position = Vector2(972, 644)
rotation = 3.1403906

[node name="MobPath3" type="Path2D" parent="MobPath"]
curve = SubResource("Curve2D_vtaks")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath/MobPath3"]
position = Vector2(1151, 71)
rotation = 1.5729469

[node name="MobPath4" type="Path2D" parent="MobPath"]
curve = SubResource("Curve2D_gee14")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath/MobPath4"]
position = Vector2(-3, 536)
rotation = -1.5663911

[node name="UpgradeSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_kvpfn")

[node name="UpgradeSpawnLocation" type="PathFollow2D" parent="UpgradeSpawn"]
position = Vector2(84, 47)
rotation = -0.0031282485

[connection signal="ability_picked_up" from="Player" to="." method="_on_player_ability_picked_up"]
[connection signal="frog_ability_used" from="Player" to="HUD" method="_on_player_frog_ability_used"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="sleep_enemy" from="Player" to="." method="player_hit_enemy"]
[connection signal="wolf_ability_used" from="Player" to="HUD" method="_on_player_wolf_ability_used"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
